Clear weather data job. Fixed bug with displaying bookmark icons on mobile devices

--- a/client/src/components/Bookmarks/BookmarkCard/BookmarkCard.module.css
+++ b/client/src/components/Bookmarks/BookmarkCard/BookmarkCard.module.css
@@ -28,7 +28,8 @@
 
 .BookmarkIcon {
   width: 20px;
+  height: 20px;
   display: flex;
-  margin-bottom: 1px;
+  margin-top: 3px;
   margin-right: 2px;
 }
